--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
+.eslintcache
 
 # testing
 /coverage
@@ -17,7 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+.eslintcache
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
